Fixed <p> misalignment on hero

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,6 @@ nav .link:hover:after{
     text-align: center;
     padding: 30px;
     transition: 0.5s ease-in;
-    transform: translateY(40px);
 }
 .col p{
     transform: translateY(40px);
